loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:7: error: ')' expected but '}' found.
  }
  ^