loopfor.LoopCourse.scala.code
for(i <-0 to 9){
  for(j <-0 to (4*8)-1){
    avance();
    if(estFaceMur(){
      
    }
  }
}